# LinuxDev2020

./: .gitignore
03_TerminalProject/: Makefile  Show.c
04_Multifile/: Makefile  prog.c
05_Environmental/: CMakeLists.txt  Readme.md  main.c  pcredemo.c
06_Debugging/: main.c
07_DebuggingTracing/: Makefile  preloader.c
08_TestingCoverage/: Makefile  buf.c  buf.h  main.c  tests.c
09_I18nL10n/: Makefile  main.c
09_I18nL10n/po/: main.pot
09_I18nL10n/po/ru/: main.po
09_I18nL10n/ru/LC_MESSAGES/: main.mo
11_Toolkits/: CMakeLists.txt  main.c  test_data.txt
